updated the code with code API
