# app/openapi/schemas.yml
@@ -1,4 +1,3 @@
-
 schemas:
   User:
       type: "object"
@@ -28,7 +27,7 @@ schemas:
           type: "string"
           format: "date-time"
           readOnly: true
-        addedBy:
+        MadeAsAdminBy:
           type: "object"
           additionalProperties: false
           description: "Date when user is converted to admin"
@@ -43,23 +42,6 @@ schemas:
         isAdmin:
           type: "boolean"
           readOnly: true
-        transations:
-          type: "array"
-          readOnly: true
-          items:
-            type: "object"
-            additionalProperties: false
-            properties:
-              to:
-                type: "string"
-                format: "email"
-              amount:
-                type: "integer"
-              success:
-                type: "boolean"
-              datetime:
-                type: "string"
-                format: "date-time"
         password:
           type: "string"
           format: "password"
@@ -90,6 +72,10 @@ schemas:
     properties:
       city:
         type: "string"
+        readOnly: true
+      cityId:
+        type: "string"
+        writeOnly: true
       street:
         type: "string"
       address:
@@ -128,6 +114,9 @@ schemas:
   DocumentFileRequest:
     type: "object"
     additionalProperties: false
+    required: 
+      - filename
+      - file
     properties:
       filename:
         type: "string"
@@ -158,6 +147,23 @@ schemas:
       cancelledCheckLeaf:
         type: "string"
         format: "uri"
+
+  ImageFileRequest:
+    type: "object"
+    additionalProperties: false
+    required:
+      - file
+    properties:
+      file:
+        type: "string"
+        format: "binary"
+
+  ImageFileResponse:
+    type: "array"
+    items:
+      type: "string"
+
+
 
   requirementStatus:
     type: string
@@ -251,7 +257,11 @@ schemas:
       description:
         type: "string"
       ngotype:
-        $ref: "#schemas/NgoType"
+        type: "string"
+        readOnly: true
+      ngotypeId:
+        type: "string"
+        writeOnly: true
       numberOfPeopleStaying:
         type: "integer"
         minimum: 1
@@ -265,33 +275,17 @@ schemas:
         type: "integer"
         format: "int64"
         minimum: 0
-      donatedList:
-        type: "array"
-        readOnly: true
-        items:
-          type: "object"
-          additionalProperties: false
-          properties:
-            email:
-              type: "string"
-              format: "email"
-            firstName:
-              type: "string"
-            secondName:
-              type: "string"
-            donatedAmount:
-              type: "integer"
-              format: "int64"
-              minimum: 1
-            datetime:
-              type: "string"
-              format: "date-time"
       mainImageUrl:
         type: "string"
       imagesUrl:
         type: "array"
         items:
             type: "string"
+      requirements:
+        type: "array"
+        items:
+          $ref: "#schemas/requirement"
+        readOnly: true
 
   NgoEditable:
       type: "object"
@@ -309,8 +303,8 @@ schemas:
           pattern: '^\d{10}$'
         description:
           type: "string"
-        ngotype:
-          $ref: "#schemas/NgoType"
+        ngotypeId:
+          type: "string"
         numberOfPeopleStaying:
           type: "integer"
           minimum: 1
@@ -318,26 +312,71 @@ schemas:
           $ref: "#schemas/Location"
     
   Transaction:
-    type: "array"
-    items:
-      type: "object"
-      additionalProperties: false
-      properties:
-        from: 
-          type: "string"
-          format: "email"
-        to:
-          type: "string"
-          format: "email"
-        amount:
-          type: "integer"
-        success:
-          type: "boolean"
-        datetime:
-          type: "string"
-          format: "date-time"
+    type: "object"
+    additionalProperties: false
+    properties:
+      _id:
+        type: string
+        readOnly: true
+      fromId:
+        type: string
+        writeOnly: true
+        description: ID of user
+      toId:
+        type: string
+        writeOnly: true
+        description: ID of ngo
+      from:
+        type: "object"
+        additionalProperties: false
+        readOnly: true
+        properties:
+          name:
+            type: "string"
+          email:
+            type: "string"
+      to:
+        type: "object"
+        additionalProperties: false
+        readOnly: true
+        properties:
+          name:
+            type: "string"
+          email:
+            type: "string"
+      amount:
+        type: "integer"
+      success:
+        type: "boolean"
+        readOnly: true
+      datetime:
+        type: "string"
+        format: "date-time"
+        readOnly: true
+      details:
+        type: "string"
+
+  Login:
+    type: "object"
+    additionalProperties: false
+    properties:
+      email:
+        type: "string"
+        format: "email"
+      password:
+        type: "string"
+        format: "password"
+      confirmpassword:
+        type: "string"
+        format: "password"
+      isNgo:
+        type: "boolean"
+        default: false
+
 
   Error:
+    type: "object"
+    additionalProperties: false
     required:
       - status
       - detail
@@ -353,6 +392,8 @@ schemas:
         type: string
 
   Delete:
+    type: "object"
+    additionalProperties: false
     required:
       - id
     properties:
@@ -360,3 +401,69 @@ schemas:
         type: string
       detail:
         type: string
+
+  Action:
+    type: "object"
+    additionalProperties: false
+    required:
+      - id
+    properties:
+      id:
+        type: string
+      detail:
+        type: string
+
+  Static: 
+    type: string
+    format: base64
+  
+
+  StaticDelete:
+    oneOf:
+      - type: "object"
+        additionalProperties: false
+        required:
+          - url
+        properties:
+          url:
+            type: string
+            format: uri
+          detail:
+            type: string
+      - type: "object"
+        additionalProperties: false
+        required:
+          - file
+        properties:
+          file:
+            type: string
+          detail:
+            type: string
+  Code:
+    type: "object"
+      additionalProperties: false
+      required:
+        - "user_id"
+      properties:
+        user_id:
+          type: "string"
+          readOnly: true
+  editCode:
+    type: "object"
+      additionalProperties: false
+      required:
+        - "user_id"
+        - "code_id"
+      properties:
+        user_id:
+          type: "string"
+          readOnly: true
+        code_id:
+          type: "string"
+          readOnly: true
+securitySchemes:
+    jwt:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+      x-bearerInfoFunc: app.api.AuthView.decode_token
